<resources>
    <string name="app_name" translatable="false">Stormy</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="error_title" translatable="false">Ups! No internet connection found!</string>
    <string name="error_massage" translatable="false">There was an error. Please try again</string>
    <string name="error_ok_button_text" translatable="false">OK</string>
    <string name="network_unavailable_message" translatable="false">Network is unavailable</string>
    <string name="error_dialog_text" translatable="false">error_dialog</string>
    <string name="weatherIconDesc" translatable="false">weatherIcon</string>
    <string name="title_activity_daily_forecast" translatable="false">DailyForecastActivity</string>
    <string name="no_daily_forecast_data" translatable="false">There is no data to display</string>
    <string name="title_activity_hourly_forecast" translatable="false">HourlyForecastActivity</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_activity_main_activity_material_ui" translatable="false">MainActivityMaterialUI</string>
    <string name="developer_email" translatable="false">Developer:<u>koemdjiev@gmail.com</u>.</string>
    <string name="no" translatable="false">No</string>
    <string name="network_not_found_title" translatable="false">Location services not found!</string>
    <string name="network_not_found_message" translatable="false">There are no location services found. This app uses the location services to determine your location and get the current weather forecast. Do you want to enable it?</string>
    <string name="current_fragment_location_name" translatable="false">Getting current weather…</string>
    <string name="current_fragment_humidity_label" translatable="false">HUMIDITY</string>
    <string name="current_fragment_wind_speed_label" translatable="false">WIND SPEED</string>
    <string name="current_fragment_rain_label" translatable="false">RAIN?</string>
    <string name="current_fragment_getting_current_weather_label" translatable="false">Getting current weather…</string>
    <string name="error_dialog_message" translatable="false">The app cannot work without internet connection!</string>
    <string name="server_error_title" translatable="false">Server not responding</string>
    <string name="no_response_from_server_message" translatable="false">There was no response from the server.Please, try again later.</string>
    <string name="location_name" translatable="false">%1$s, %2$s</string>
    <string name="saved_if_whats_new_seen" translatable="false">if whats new seen</string>
    <string name="daily_today_text" translatable="false">Today</string>
    <string name="permission_camera_rationale" translatable="false">The app cannot work without location access!.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="alert_message_no_location_permission" translatable="false">This application relies heavily on the location of the device in order to provide weather forecast data. Without the location permission the app cannot work.</string>
    <string name="alert_title_no_location_permission" translatable="false">Location Permission Needed</string>
    <string name="alert_possitive_button_no_location_permission" translatable="false">Allow</string>
    <string name="alert_negative_button_no_location_permission" translatable="false">Deny</string>
    <string name="location_name_on_error" translatable="false">lastLocationName</string>
    <string name="title_activity_daily_more_info">DailyMoreInfoActivity</string>
    <string name="title_activity_hourly_more_info">HourlyMoreInfoActivity</string>

    <string name="banner_ad_unit_id">ca-app-pub-1798838525129690/3848104164</string>
</resources>
