<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentRoot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_gradient">


    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/locationLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/weatherIconDesc"
        android:scaleType="fitXY"
        android:src="@mipmap/clear_night" />
    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/current_fragment_location_name"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="--"
        android:textColor="@android:color/white"
        android:textSize="125sp"/>

    <ImageView
        android:id="@+id/degreeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/temperatureLabel"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="27dp"
        android:layout_toEndOf="@+id/temperatureLabel"
        android:layout_toRightOf="@+id/temperatureLabel"
        android:src="@mipmap/degree" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/degreeImageView"
        android:layout_centerHorizontal="true"
        android:text="..."
        android:textColor="#80ffffff"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/summaryLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/humidityLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/current_fragment_humidity_label"
                android:textColor="#80ffffff"
                android:textIsSelectable="true"/>

            <TextView
                android:id="@+id/humidityValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="--"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/windSpeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/current_fragment_wind_speed_label"
                android:textColor="#80ffffff"
                android:textIsSelectable="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/windSpeedValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="--"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/kmh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KM/h"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#80ffffff"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/precipLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/current_fragment_rain_label"
                android:textColor="#80ffffff" />

            <TextView
                android:id="@+id/precipValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="--"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/summaryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:gravity="fill_horizontal"
        android:text="@string/current_fragment_getting_current_weather_label"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:gravity="center">
        <TextView
            android:id="@+id/feels_like_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Feels like: --"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#60ffffff"
            android:textSize="12sp" />
        <ImageView
            android:id="@+id/degreeImageViewFeelsLike"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignTop="@+id/feels_like_label"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/feels_like_label"
            android:layout_toRightOf="@+id/feels_like_label"
            android:src="@mipmap/degree" />
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/current_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:divider="@null"
            android:dividerHeight="0dp"/>
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>